--- a/css/tedxcu.css
+++ b/css/tedxcu.css
@@ -1,3 +1,6 @@
+h1,h2,h3,h4,h5,h6,p,label,span,li,a{
+	font-family: 'Helvetica'!important;
+}
 footer{
 	background-color: #e62b1e;
 	color: #ffffff;
